# VidCrawl

./: .gitignore  PLAN.md  README.md  pyproject.toml
benchmarks/: demo_queries.json  diversity_queries.json  freshness_queries.json  technical_queries.json
companion/: package-lock.json  package.json
companion/core/: Cargo.toml
companion/core/src/: lib.rs
companion/src/: index.html  main.js  styles.css
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  COMPANION_APP.md  RESEARCH_PROPOSAL.md
scripts/: demo_walkthrough.sh
tests/: conftest.py  test_batch.py  test_benchmarks.py  test_chunking.py  test_claims.py  test_cli.py  test_companion_server.py  test_db.py  test_dedupe.py  test_docs.py  test_doctor.py  test_embeddings.py  test_freshness.py  test_graph.py  test_models.py  test_providers.py  test_search_rerank.py  test_server.py  test_technical.py  test_utils.py  test_week2.py  test_week3.py  test_week4.py
vidcrawl/: __main__.py  cli.py  config.py  db.py  demo.py  doctor.py  eval.py  freshness.py  models.py
vidcrawl/api/: app.py  jobs.py
vidcrawl/claims/: cluster.py  extract.py  normalize.py
vidcrawl/dedupe/: cluster.py  normalize.py  novelty.py  similarity.py
vidcrawl/embeddings/: provider.py  similarity.py  store.py
vidcrawl/graph/: build.py  entities.py  export.py  query.py  stats.py
vidcrawl/ingest/: downloader.py  media.py  metadata.py  transcript.py
vidcrawl/process/: chunking.py  ideas.py  keyframes.py  ocr.py  pipeline.py
vidcrawl/search/: diversity.py  features.py  fts.py  query.py  rerank.py
vidcrawl/technical/: code.py  commands.py  equations.py  errors.py  extract.py
vidcrawl/utils/: hashing.py  time.py
(+9 files in other folders)
