[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vidcrawl"
version = "0.1.0"
description = "Local-first video intelligence and search MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
dev = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "pytest>=7.0.0",
]

[project.scripts]
vidcrawl = "vidcrawl.cli:app"

[tool.setuptools.packages.find]
include = ["vidcrawl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
