[package]
name = "vidcrawl-companion"
version = "0.1.0"
edition = "2021"

[lib]
name = "vidcrawl_companion_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
vidcrawl-companion-core = { path = "../core" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
